force-app/main/default/objects/custom_create108__c/custom_create108__c.object-meta.xml
<CustomObject>
    <label>Custom created object108</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects108</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>