force-app/main/default/objects/custom_create108__c/fields/custom_create_108field527__c.field-meta.xml
<CustomField>
    <fullName>custom_create_108field527__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 108field527</label>
    <type>Checkbox</type>
</CustomField>